syntax = "proto3";

package products;

service ProductsController {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc GetProducts (GetProductRequest) returns (GetProductResponse);
}

message Product {
  string product_name = 1;
  uint64 product_count = 2;
}

message AddProductRequest {
  string user_id = 1;
  Product product = 2;
}

message GetProductResponse {
  repeated Products products = 1;
}

message Products {
  string product_id = 1;
  string product_name = 2;
  uint64 product_count = 3;
}

message AddProductResponse {
  string response = 1;
}

message GetProductRequest {
  string user_id = 1;
}
